--- a/main.html
+++ b/main.html
@@ -7,7 +7,10 @@
     <title>for fun</title>
 </head>
 <body>
-    <h1>welcom to we project</h1>
+    <header>
+        <h1>welcom to we project</h1>
+    </header>
+    
 
     <script src="script.js"></script>
 </body>
