--- a/main.html
+++ b/main.html
@@ -4,14 +4,24 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <title>for fun</title>
 </head>
 <body>
     <header>
-        <h1>welcom to we project</h1>
-        <h2>Let's go make it</h2>
+        <form action="#">
+
+<div class="d-txt">
+
+    <box-icon name='search' class="search"></box-icon>
+
+    <input type="text" class="txt" placeholder="search...">
+
+</div>
+
+        </form>
     </header>
-    
+
 
     <script src="script.js"></script>
 </body>
