--- a/main.html
+++ b/main.html
@@ -21,6 +21,11 @@
 
         </form>
     </header>
+    
+    <footer>
+        <span>icon by</span>
+        <a href="https://boxicons.com/">boxicon</a>
+    </footer>
 
 
     <script src="script.js"></script>
